完成rerank的测试用例